--- a/spec/Statements.tex
+++ b/spec/Statements.tex
@@ -28,6 +28,7 @@ statement:
   method-declaration-statement
   type-declaration-statement
   variable-declaration-statement
+  remote-variable-declaration-statement
   tuple-variable-declaration-statement
   use-statement
   type-select-statement
@@ -43,15 +44,16 @@ in~\rsec{Modules}.  Function declaration statements are defined
 in~\rsec{Functions}.  Method declaration statements are defined
 in~\rsec{Class_Methods}.  Type declaration statements are defined
 in~\rsec{Types}.  Variable declaration statements are defined
-in~\rsec{Variables}.  Tuple variable declaration statements are
-defined in ~\rsec{Variable_Declarations_in_a_Tuple}.  Return
-statements are defined in~\rsec{The_Return_Statement}.  Yield
-statements are defined in~\rsec{The_Yield_Statement}.
-The \sntx{parallel-statement} consists of statements that create or
-limit parallelism.  These statements are described
-in~\rsec{Parallelism_and_Synchronization}.  The \sntx{on-statement} is
-defined in~\rsec{On}.  The compiler error statement is defined
-in~\rsec{User_Defined_Compiler_Errors}.
+in~\rsec{Variables}.  Remote variable declaration statements are
+defined in~\rsec{remote_variable_declarations}.  Tuple variable
+declaration statements are defined
+in~\rsec{Variable_Declarations_in_a_Tuple}.  Return statements are
+defined in~\rsec{The_Return_Statement}.  Yield statements are defined
+in~\rsec{The_Yield_Statement}.  The \sntx{parallel-statement} consists
+of statements that create or limit parallelism.  These statements are
+described in~\rsec{Parallelism_and_Synchronization}.
+The \sntx{on-statement} is defined in~\rsec{On}.  The compiler error
+statement is defined in~\rsec{User_Defined_Compiler_Errors}.
 
 \subsection{Blocks}
 \label{Blocks}
