Added the multilocale test into the examples documentation
It justified adding a whole new table to README.features!! :)



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13785 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -19,6 +19,7 @@ demonstrate various Chapel features:
      iterators.chpl         : sample iterators
      jacobi.chpl            : Jacobi iteration
      linkedList.chpl        : generic linked list example
+     multilocale.chpl       : demonstration of multi-locale concepts
      norm.chpl              : sample module for computing array norms
      opaque.chpl            : tutorial for Chapel opaque arrays
      prodCons.chpl          : producer-consumer example using circular buffer
@@ -77,4 +78,5 @@ Other files
   *.execopts      : "
   *.good          : "
   *.notest        : "
+  *.numlocales    : "
   *.perfkeys      : "
